name:                intmap-graph
version:             0.1.0.0
homepage:            https://github.com/tkvogt/intmap-graph#readme
license:             BSD3
license-file:        LICENSE
author:              Tillmann Vogt
maintainer:          tillk.vogt@gmail.com
copyright:           2017 Tillmann Vogt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:  benchmark/*.txt

library
  hs-source-dirs:      src
  exposed-modules:     Graph.IntMap
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , mtl
                     , semigroups
                     , text
                     , vector
                     , word8

  default-language:    Haskell2010

test-suite intmap-graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , intmap-graph
                     , semigroups
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite Example
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/examples
  main-is:             Example.hs
  build-depends:       base
                     , containers
                     , hspec
                     , intmap-graph
                     , semigroups
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite SortNodes
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/examples
  main-is:             SortNodes.hs
  build-depends:       base
                     , containers
                     , hspec
                     , intmap-graph
                     , semigroups
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark criterion
    build-depends:     base
                     , criterion >= 1.3
                     , intmap-graph

    default-language: Haskell2010
    hs-source-dirs:   benchmark
    other-modules:    Paths_judy_graph_db
    main-is:          Bench.hs
    type:             exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/tkvogt/intmap-graph
