name:                intmap-graph
version:             0.1.0.0
homepage:            https://github.com/tkvogt/intmap-graph#readme
license:             BSD3
license-file:        LICENSE
author:              Tillmann Vogt
maintainer:          tillk.vogt@gmail.com
copyright:           2017 Tillmann Vogt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graph.IntMap
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , mtl
                     , semigroups
                     , text
                     , vector
                     , word8

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tkvogt/intmap-graph
